[gd_scene load_steps=3 format=3 uid="uid://dx68bnwjre2iy"]

[ext_resource type="Script" path="res://grid_nodes/methods/node_method_start.gd" id="1_71g0g"]
[ext_resource type="PackedScene" uid="uid://b2vw0lgwx7g3r" path="res://class_regions/variables/vars_class_region.tscn" id="2_41hbm"]

[node name="MethodStartNode" type="GraphNode"]
offset_right = 9.0
offset_bottom = 55.0
title = "- Method - "
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_71g0g")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Start"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MethodDataEdit" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MethodDataEdit"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MethodDataEdit/MarginContainer"]
layout_mode = 2

[node name="MethodNameEdit" type="LineEdit" parent="MethodDataEdit/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "my_method_name"
placeholder_text = "method_name"

[node name="VarsRegion" parent="MethodDataEdit/MarginContainer/VBoxContainer" instance=ExtResource("2_41hbm")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="text_submitted" from="MethodDataEdit/MarginContainer/VBoxContainer/MethodNameEdit" to="." method="_on_method_name_submitted"]
